--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Modified from:
 #     https://github.com/github/gitignore/blob/master/Unity.gitignore
-
+/[Uu]ser[Ss]ettings/
+/[Ss]cenes/
 /[Ll]ibrary/
 /[Uu]serSettings/
 [Tt]emp/
