--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 # Modified from:
 #     https://github.com/github/gitignore/blob/master/Unity.gitignore
-/[Uu]ser[Ss]ettings/
-/[Ss]cenes/
-/[Ll]ibrary/
-/[Uu]serSettings/
-[Tt]emp/
-[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
+*/[Ss]cenes/
+*/[Ll]ibrary/
+*/[Uu]serSettings/
+*[Tt]emp/
+*[Oo]bj/
+*/[Bb]uild/
+*/[Bb]uilds/
+*/[Ll]ogs/
 /[Mm]emoryCaptures/
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
